# fmt-rs

./: .gitignore  Cargo.toml  LICENSE  PROGRESS.md  README.md
scripts/: stress_verify.py
src/: ast.rs  doc.rs  format.rs  json.rs  lexer.rs  lib.rs  main.rs  parser.rs  printer.rs
tests/: corpus.json  stress.rs
